// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateGrammar > fanuc-gcode: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "root": [
      [
        "^\\s*%.*$",
        "programMarker",
      ],
      [
        "\\([^)]*\\)",
        "comment",
      ],
      [
        "\\([^)]*$",
        "comment",
      ],
      [
        "^\\s*[/][1-9]?",
        "skip",
      ],
      [
        "^(\\s*)(N\\s*\\d+)(\\s*)([/][1-9]?)",
        [
          "",
          "blockNumber",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*O(?<name>\\d+)",
        "programMarker",
      ],
      [
        "^\\s*:(?<name>\\d+)",
        "programMarker",
      ],
      [
        "^\\s*:\\s*\\d+",
        "programMarker",
      ],
      [
        "(?:WHILE|GOTO|THEN|AND|END|MOD|XOR|DO|EQ|GE|GT|IF|LE|LT|NE|OR)(?![A-Za-z])",
        "keyword",
      ],
      [
        "[A-Za-z]{2,}(?=\\s*\\[)",
        "keyword",
      ],
      [
        "N\\s*\\d+",
        "blockNumber",
      ],
      [
        "G\\s*\\d{1,3}(?:\\.\\d{1,2})?",
        "gcode",
      ],
      [
        "M\\s*\\d{1,3}",
        "mcode",
      ],
      [
        "T(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "tool",
      ],
      [
        ",[A-Za-z](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "number",
      ],
      [
        "[XYZABCUVW](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "axis",
      ],
      [
        "[IJK](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "arcCenter",
      ],
      [
        "F(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "feed",
      ],
      [
        "S(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "spindle",
      ],
      [
        "[DHLOPQR](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "number",
      ],
      [
        "(?:#\\d+)",
        "variable",
      ],
      [
        "#\\s*(?=\\[)",
        "variable",
      ],
      [
        "(?:\\d+\\.?\\d*|\\.\\d+)",
        "number",
      ],
      [
        "[=+\\-*/\\^%:<>|&,!\\[\\];]",
        "operator",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;

exports[`generateGrammar > fanuc-lathe: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "root": [
      [
        "^\\s*%.*$",
        "programMarker",
      ],
      [
        "\\([^)]*\\)",
        "comment",
      ],
      [
        "\\([^)]*$",
        "comment",
      ],
      [
        "^\\s*[/][1-9]?",
        "skip",
      ],
      [
        "^(\\s*)(N\\s*\\d+)(\\s*)([/][1-9]?)",
        [
          "",
          "blockNumber",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*O(?<name>\\d+)",
        "programMarker",
      ],
      [
        "^\\s*:(?<name>\\d+)",
        "programMarker",
      ],
      [
        "^\\s*:\\s*\\d+",
        "programMarker",
      ],
      [
        "(?:WHILE|GOTO|THEN|AND|END|MOD|XOR|DO|EQ|GE|GT|IF|LE|LT|NE|OR)(?![A-Za-z])",
        "keyword",
      ],
      [
        "[A-Za-z]{2,}(?=\\s*\\[)",
        "keyword",
      ],
      [
        "N\\s*\\d+",
        "blockNumber",
      ],
      [
        "G\\s*\\d{1,3}(?:\\.\\d{1,2})?",
        "gcode",
      ],
      [
        "M\\s*\\d{1,3}",
        "mcode",
      ],
      [
        "T(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "tool",
      ],
      [
        ",[A-Za-z](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "number",
      ],
      [
        "[XZCYUW](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "axis",
      ],
      [
        "[IK](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "arcCenter",
      ],
      [
        "F(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "feed",
      ],
      [
        "S(?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "spindle",
      ],
      [
        "[ABDEHJLOPQRV](?:\\s*[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|\\s*[+-]?\\s*(?=[#\\[]))",
        "number",
      ],
      [
        "(?:#\\d+)",
        "variable",
      ],
      [
        "#\\s*(?=\\[)",
        "variable",
      ],
      [
        "(?:\\d+\\.?\\d*|\\.\\d+)",
        "number",
      ],
      [
        "[=+\\-*/\\^%:<>|&,!\\[\\];]",
        "operator",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;

exports[`generateGrammar > heidenhain-klartext: is stable 1`] = `
{
  "defaultToken": "",
  "ignoreCase": true,
  "tokenizer": {
    "root": [
      [
        "^(?:\\s*\\d+\\s+\\*).*$",
        "section",
      ],
      [
        ";.*?(?=\\s*(?:~\\s*$))",
        "comment",
      ],
      [
        ";.*$",
        "comment",
      ],
      [
        "~\\s*$",
        "operator",
      ],
      [
        ""[^"]*"",
        "string",
      ],
      [
        "^(\\s*)(\\d+)(\\s*)([/])",
        [
          "",
          "blockNumber",
          "",
          "skip",
        ],
      ],
      [
        "^\\s*\\d+(?=\\s|$)",
        "blockNumber",
      ],
      [
        "(?:FUNCTION\\s+RESET\\s+TCPM|CYCL\\s+CALL\\s+PAT|CYCL\\s+CALL\\s+POS|FUNCTION\\s+TCPM|PLANE\\s+SPATIAL|PLANE\\s+RESET|TRANS\\s+DATUM|BEGIN\\s+PGM|CYCL\\s+CALL|TOOL\\s+CALL|APPR\\s+LCT|BLK\\s+FORM|CALL\\s+LBL|CALL\\s+PGM|CYCL\\s+DEF|TOOL\\s+DEF|APPR\\s+CT|APPR\\s+LN|APPR\\s+LT|DEP\\s+LCT|END\\s+PGM|SEL\\s+PGM|DEP\\s+CT|DEP\\s+LN|DEP\\s+LT|FAUTO|FMAX|INCH|STOP|CHF|CTP|LBL|REP|RND|CC|CP|CR|CT|FN|LN|LP|MM|R0|RL|RR)(?![A-Za-z])",
        "keyword",
      ],
      [
        "(?:C|L)(?=\\s|$)",
        "keyword",
      ],
      [
        "M\\d{1,3}(?![A-Za-z0-9])",
        "mcode",
      ],
      [
        "DR[+-](?![\\d\\.Q])",
        "keyword",
      ],
      [
        "(?:I)?[XYZABCUVW](?:(?:[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|[+-]?(?:Q[LRS]?\\d+))|(?=\\s|$))",
        "axis",
      ],
      [
        "(?:FU|FZ|F)(?:(?:[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|[+-]?(?:Q[LRS]?\\d+)))",
        "feed",
      ],
      [
        "S(?:(?:[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|[+-]?(?:Q[LRS]?\\d+)))",
        "spindle",
      ],
      [
        "[+-]?(?:Q[LRS]?\\d+)",
        "variable",
      ],
      [
        "(?:I)?(?:CCA|DR2|LEN|REP|DL|DR|MB|NX|NY|NZ|PA|PR|TX|TY|TZ|R)(?:(?:[+-]?(?:\\d+\\.?\\d*|\\.\\d+)|[+-]?(?:Q[LRS]?\\d+)))",
        "number",
      ],
      [
        "[+-]?(?:\\d+\\.?\\d*|\\.\\d+)",
        "number",
      ],
      [
        "[=+\\-*/\\^%:<>|&,()!\\[\\]]",
        "operator",
      ],
      [
        "[A-Za-z][A-Za-z0-9+\\-.:\\\\/_]*",
        "",
      ],
      [
        "\\s+",
        "",
      ],
    ],
  },
}
`;
